// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentUploader/UploadInput should render correctly when inputLabel is available 1`] = `
<label
  className="inputLabelClass"
>
  yo
  <input
    className="be-input"
    multiple={true}
    onChange={[Function]}
    type="file"
  />
</label>
`;

exports[`components/ContentUploader/UploadInput should render correctly when inputLabel is not available 1`] = `""`;

exports[`components/ContentUploader/UploadInput should render correctly when isFolderUpload is true 1`] = `
<label
  className=""
>
  yo
  <input
    className="be-input"
    directory=""
    multiple={true}
    onChange={[Function]}
    type="file"
    webkitdirectory=""
  />
</label>
`;
